Styling menu, need to fix on toggle section

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-    <section class="showcase">
+    <section class="showcase active">
         <header>
             <h2 class="logo">Travel</h2>
-            <div class="toggle">
+            <div class="toggle active">
                 <i class="icon-caret-down icon-4x"></i>
             </div>
         </header>
