--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0", minimum-scale=1>
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CDN https://fontawesome.com/v3.2.1/get-started/ -->
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
@@ -16,39 +16,69 @@
         <header>
             <h2 class="logo">Travel</h2>
             <div class="toggle active">
-                <i class="icon-caret-down icon-4x"></i>
+                <i class="icon-4x"></i>
             </div>
         </header>
 
-        <!-- <video src="resort-vid.mp4" muted loop autoplay></video> -->
+        <video src="resort-vid.mp4" muted loop autoplay></video>
 
         <div class="overlay"> </div>
 
         <!-- Content of website -->
         <div class="text">
-            <h2>Fuck Volaris </h2>
+            <h2>Visit Morelia </h2>
             <h3>Explore the World</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure tempora aut error natus modi voluptas atque
                 quidem cum commodi numquam!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure tempora aut error natus modi voluptas atque
+                quidem cum commodi numquam!</p>
+            <!-- styled to be a button -->
             <a href="#">Explore</a>
-
         </div>
-        <!-- Done with Icons -->
-        <ul class="social">
-            <li><i class="icon-facebook icon-2x"></i>Facebook</li>
-            <li><i class="icon-twitter icon-2x"></i>Twitter</li>
-            <li><i class="icon-instagram icon-2x"></i>Instagram</li>
-        </ul>
     </section>
 
-    <!-- Main Menu replace with icons later -->
+    <!-- Icons imported from FontAwesome , NO Anchor tag-->
+    <ul class="social">
+        <li><i class="icon-facebook icon-2x"></i>Facebook</li>
+        <li><i class="icon-twitter icon-2x"></i>Twitter</li>
+        <li><i class="icon-instagram icon-2x"></i>Instagram</li>
+    </ul>
+
+    <!-- Main Menu with Icons-->
     <div class="menu">
         <ul>
-            <li><a href="#"></a>Home</li>
-            <li><a href="#"></a>About</li>
-            <li><a href="#"></a>Contact</li>
+            <li>
+                <a href="#">
+                    <i class="icon-home"/></i>
+                    Home
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="icon-share"></i>
+                    About
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="icon-money"></i>
+                    Contact
+                </a>
+            </li>
         </ul>
     </div>
+
+    <!-- Javascript for active state -->
+    <script>
+        const menuToggle = document.querySelector('.toggle')
+        const showcaseToggle = document.querySelector('.showcase')
+
+        menuToggle.addEventListener('click', () => {
+            menuToggle.classList.toggle('active')
+            showcaseToggle.classList.toggle('active')
+        })
+    </script>
 </body>
 
 </html>
+
