Updated readme to have updated gif

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </header>
 
-        <video src="resort-vid.mp4" muted loop autoplay></video>
+        <!-- <video src="resort-vid.mp4" muted loop autoplay></video> -->
 
         <div class="overlay"> </div>
 
